T/F questions support added

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     <div class="container">
         <div id="start-screen" class="screen">
-            <h1>"Future Patients Needs To Be Prepared"</h1>
+            <h1>"Future Doctors Must Be Prepared"</h1>
             <div class="start-container">
                 <div class="select-container">
                     <label for="exam-select">Select question bank:</label>
